// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppBarNavigation ACT theme matches the snapshot 1`] = `
<div>
  <header
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 makeStyles-appBarRoot-1 makeStyles-appBarRoot-3 MuiAppBar-root MuiAppBar-colorTransparent MuiAppBar-positionStatic css-v526sl-MuiPaper-root-MuiAppBar-root"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways makeStyles-logoLink-6 css-1iwtne7-MuiTypography-root-MuiLink-root"
      to="https://act-et.org"
    >
      <img
        alt="ACT"
        aria-label="ACT"
        class="makeStyles-logoImgWrapped-5"
        src="https://i.imgur.com/P0gtzO0.png"
      />
    </a>
    <div
      class="MuiGrid-root makeStyles-navContainer-2 MuiGrid-container MuiGrid-spacing-xs-4 css-480o17-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways makeStyles-navLink-7 css-1iwtne7-MuiTypography-root-MuiLink-root"
          to="#"
        >
          <p
            class="makeStyles-navTypography-8 makeStyles-navTypography-9 MuiTypography-root MuiTypography-body1 css-vkc4v8-MuiTypography-root"
          >
            Home
          </p>
        </a>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways makeStyles-navLink-7 css-1iwtne7-MuiTypography-root-MuiLink-root"
          to="#"
        >
          <p
            class="makeStyles-navTypography-8 makeStyles-navTypography-10 MuiTypography-root MuiTypography-body1 css-vkc4v8-MuiTypography-root"
          >
            Other Page
          </p>
        </a>
      </div>
    </div>
  </header>
</div>
`;

exports[`AppBarNavigation ACT_ET theme matches the snapshot 1`] = `
<div>
  <header
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 makeStyles-appBarRoot-11 makeStyles-appBarRoot-13 MuiAppBar-root MuiAppBar-colorTransparent MuiAppBar-positionStatic css-v526sl-MuiPaper-root-MuiAppBar-root"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways makeStyles-logoLink-16 css-1iwtne7-MuiTypography-root-MuiLink-root"
      to="https://act-et.org"
    >
      <img
        alt="ACT"
        aria-label="ACT"
        class="makeStyles-logoImgWrapped-15"
        src="https://i.imgur.com/P0gtzO0.png"
      />
    </a>
    <div
      class="MuiGrid-root makeStyles-navContainer-12 MuiGrid-container MuiGrid-spacing-xs-4 css-480o17-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways makeStyles-navLink-17 css-1iwtne7-MuiTypography-root-MuiLink-root"
          to="#"
        >
          <p
            class="makeStyles-navTypography-18 makeStyles-navTypography-19 MuiTypography-root MuiTypography-body1 css-vkc4v8-MuiTypography-root"
          >
            Home
          </p>
        </a>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways makeStyles-navLink-17 css-1iwtne7-MuiTypography-root-MuiLink-root"
          to="#"
        >
          <p
            class="makeStyles-navTypography-18 makeStyles-navTypography-20 MuiTypography-root MuiTypography-body1 css-vkc4v8-MuiTypography-root"
          >
            Other Page
          </p>
        </a>
      </div>
    </div>
  </header>
</div>
`;

exports[`AppBarNavigation ENCOURA_DATALAB theme matches the snapshot 1`] = `
<div>
  <header
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 makeStyles-appBarRoot-21 makeStyles-appBarRoot-23 MuiAppBar-root MuiAppBar-colorTransparent MuiAppBar-positionStatic css-v526sl-MuiPaper-root-MuiAppBar-root"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways makeStyles-logoLink-26 css-1iwtne7-MuiTypography-root-MuiLink-root"
      to="https://act-et.org"
    >
      <img
        alt="ACT"
        aria-label="ACT"
        class="makeStyles-logoImgWrapped-25"
        src="https://i.imgur.com/P0gtzO0.png"
      />
    </a>
    <div
      class="MuiGrid-root makeStyles-navContainer-22 MuiGrid-container MuiGrid-spacing-xs-4 css-480o17-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways makeStyles-navLink-27 css-1iwtne7-MuiTypography-root-MuiLink-root"
          to="#"
        >
          <p
            class="makeStyles-navTypography-28 makeStyles-navTypography-29 MuiTypography-root MuiTypography-body1 css-vkc4v8-MuiTypography-root"
          >
            Home
          </p>
        </a>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways makeStyles-navLink-27 css-1iwtne7-MuiTypography-root-MuiLink-root"
          to="#"
        >
          <p
            class="makeStyles-navTypography-28 makeStyles-navTypography-30 MuiTypography-root MuiTypography-body1 css-vkc4v8-MuiTypography-root"
          >
            Other Page
          </p>
        </a>
      </div>
    </div>
  </header>
</div>
`;
